[gd_scene load_steps=6 format=3 uid="uid://cpstwmgbrtgk6"]

[ext_resource type="Texture2D" uid="uid://c5hos87pr55o4" path="res://Sprites/StageObjects/spr_spikes.png" id="1_7u54m"]
[ext_resource type="Script" path="res://Scripts/Gameplay/Obstacles/genericObstacle.gd" id="2_sxykr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7x4jx"]
atlas = ExtResource("1_7u54m")
region = Rect2(0, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tjirt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x4jx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7x3du"]
size = Vector2(24, 10)

[node name="Spikes" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_tjirt")
centered = false
script = ExtResource("2_sxykr")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 11)
shape = SubResource("RectangleShape2D_7x3du")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(16, 0)
scale = Vector2(7.2, 5.6)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
